--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="maincountainer">
+        <div class="sidebar">
+            <div id="home" class="sidebarchild">Home</div>
+            <div class="sidebarchild">Profile</div>
+            <div class="sidebarchild">Messages</div>
+            <div class="sidebarchild">History</div>
+            <div class="sidebarchild">Tasks</div>
+            <div class="sidebarchild">Commmunities</div>
+            <div class="sidebarchild">Settings</div>
+            <div class="sidebarchild">Support</div>
+            <div class="sidebarchild">Privacy</div>
+        </div>
+    </div>
 </body>
 </html>
