side bar finished

--- a/index.html
+++ b/index.html
@@ -9,15 +9,37 @@
 <body>
     <div class="maincountainer">
         <div class="sidebar">
-            <div id="home" class="sidebarchild">Home</div>
-            <div class="sidebarchild">Profile</div>
-            <div class="sidebarchild">Messages</div>
-            <div class="sidebarchild">History</div>
-            <div class="sidebarchild">Tasks</div>
-            <div class="sidebarchild">Commmunities</div>
-            <div class="sidebarchild">Settings</div>
-            <div class="sidebarchild">Support</div>
-            <div class="sidebarchild">Privacy</div>
+            <div class="sidebarchild" style="padding-bottom: 20px;">
+                <img src="./view-dashboard.svg" style="filter: invert(100%);" height="15px" alt="">
+                <p style="font-size: larger; font-size: large;">Dashboard</p></div>
+            <div id="home" class="sidebarchild">
+                <img src="./home-account.svg" style="filter: invert(100%)" height="15px" alt="">
+                <p>Home</p>
+            </div>
+            <div class="sidebarchild">
+                <img src="./profile.svg" style="filter: invert(100%);" height="15px" alt="">
+                <p>Profile</p></div>
+            <div class="sidebarchild">
+                <img src="./message-badge.svg" style="filter: invert(100%)" height="15px" alt="">
+                <p>Messages</p></div>
+            <div class="sidebarchild">
+                <img src="./history.svg" style="filter: invert(100%)" height="15px" alt="">
+                <p>History</p></div>
+            <div class="sidebarchild">
+                <img src="./tasks.svg" style="filter: invert(100%)" height="15px" alt="">
+                <p>Tasks</p></div>
+            <div class="sidebarchild">
+                <img src="./account-group.svg" style="filter: invert(100%)" height="15px" alt="">
+                <p>Commmunities</p></div>
+            <div class="sidebarchild">
+                <img src="./cog.svg" style="filter: invert(100%)" height="15px" alt="">
+                <p>Settings</p></div>
+            <div class="sidebarchild">
+                <img src="./face-agent.svg" style="filter: invert(100%)" height="15px" alt="">
+                <p>Support</p></div>
+            <div class="sidebarchild">
+                <img src="./security.svg" style="filter: invert(100%)" height="15px" alt="">
+                <p>Privacy</p></div>
         </div>
     </div>
 </body>
