--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="maincountainer">
         <div class="sidebar">
-            <div class="sidebarchild" style="padding-bottom: 20px;">
+            <div class="sidebarchild">
                 <img src="./view-dashboard.svg" style="filter: invert(100%);" height="15px" alt="">
                 <p style="font-size: larger; font-size: large;">Dashboard</p></div>
             <div id="home" class="sidebarchild">
